# HTTP-web-server

./: .gitignore  .gitlab-ci.yml  Makefile.am  README.md  config.h  configure.ac
src/: main.cc
src/config/: config.cc  config.hh
src/events/: event-loop.cc  event-loop.hh  events.cc  events.hh  healthcheck.cc  healthcheck.hh  listener.cc  listener.hh  recvbody.hh  recvheaders.hh  recvrequest.hh  register.cc  register.hh  register.hxx  sendresponse.cc  sendresponse.hh  sni.cc  sni.hh
src/events/receivers/: recvbody.cc  recvbody.hh  recvheaders.cc  recvheaders.hh  recvhealthcheck.cc  recvhealthcheck.hh  recvresponse.cc  recvresponse.hh
src/events/senders/: sendhealthcheck.cc  sendhealthcheck.hh  sendrequest.cc  sendrequest.hh  sendresponse.cc  sendresponse.hh
src/misc/: define.hh  fd.cc  fd.hh
src/misc/addrinfo/: addrinfo.hh
src/misc/openssl/: base64.cc  ssl-wrapper.hh
src/request/: error.cc  error.hh  request.cc  request.hh  response.cc  response.hh  types.hh
src/socket/: default-socket.cc  default-socket.hh  socket.hh  ssl-socket.cc  ssl-socket.hh
src/timeout/: timeout.cc  timeout.hh  timeout_keepalive.cc  timeout_keepalive.hh  timeout_proxy.cc  timeout_proxy.hh  timeout_throughput.cc  timeout_throughput.hh  timeout_transaction.cc  timeout_transaction.hh
src/vhost/: connection.hh  dispatcher.cc  dispatcher.hh  vhost-factory.hh  vhost-reverse-proxy.cc  vhost-reverse-proxy.hh  vhost-static-file.cc  vhost-static-file.hh  vhost.hh
tests/: dry_run.sh  requirements.txt  testsuite.py  testsuite.sh
tests/certs/: localhost-key.pem  localhost.pem  rootCA-key.pem  rootCA.pem
tests/config_tests/: config_aubergine.json  config_auth.json  config_backend_5000.json  config_backend_5050.json  config_backend_6000.json  config_bad_ip.json  config_bad_port_negative.json  config_bad_port_reserved.json  config_bad_port_string.json  config_bad_port_too_big.json  config_empty_hostname.json  config_file.json  config_file_error.json  config_file_list_directory.json  config_file_multi_vhosts.json  config_file_multi_vhosts_5000.json  config_file_ssl_auth.json  config_filev6.json  config_http_and_https.json  config_name.json  config_reverse_proxy.json  config_reverse_proxy_ipv6.json  config_reverse_proxy_nginx.json  config_reverse_proxy_ssl.json  config_reverse_proxy_ssl_no_header.json  config_reverse_proxy_ssl_some_headers.json  config_reverse_proxy_timeout.json  config_root_parent_folder.json  config_ssl.json  config_timeout.json  config_timeout_all.json  config_upstream.json  config_upstream_auth.json  config_upstream_bad_upstream_name.json  config_upstream_empty_host.json  config_upstream_empty_name.json  config_upstream_health_missing_fail-robin.json  config_upstream_health_missing_failover.json  config_upstream_ip_and_uptsream.json  config_upstream_nginx.json  (+4 more)
tests/testsuite/: tests.sh
tests/testsuite/scripts/content-length/: double-content-length  get-content-length-negative  get-content-length-no-body  get-content-length-with-body  get-content-length-zero  post-content-length-negative  post-content-length-no-body
tests/testsuite/scripts/dispatcher/: bad_host  hostname  hostname_port  ip  ip_port
tests/testsuite/scripts/edge_cases/: Bad_version  Http_1-dot-1  Same_headers  Trailing_whitespace  emojis
tests/testsuite/scripts/forbidden_request/: delete
tests/testsuite/scripts/good_requests/: file-in-dir-no-slash-at-end  file-in-dir-slash-at-end
tests/testsuite/scripts/path_check/: go-back-in-tree  multipledotdot
tests/testsuite/scripts/symlink/: broken-link  broken-link-content-length-negative  loop  loop-content-length-negative
tests/testsuite/scripts/temoins/: ko  ok
tests/www/: U+1F600.html  load_balancing_1  load_balancing_2  load_balancing_3  😁💩🕷🕸.html
tests/www/download/: file
www/: index.html
